--- a/package.json
+++ b/package.json
@@ -1,67 +1,81 @@
 {
-	"name": "react-component-template",
-	"displayName": "react component template",
-	"description": "generate react component in typescript/javascript",
+  "name": "react-component-template",
+  "displayName": "react component template",
+  "description": "generate react component in typescript/javascript",
 	"version": "0.0.2",
-	"engines": {
-		"vscode": "^1.52.0"
-	},
-	"categories": [
-		"Other",
-		"Snippets",
-		"Programming Languages"
-	],
-	"activationEvents": [
-		"onCommand:react-component-template.create-react-component"
-	],
-	"main": "./dist/extension.js",
-	"contributes": {
-		"menus": {
-			"explorer/context": [
-				{
-					"when": "explorerResourceIsFolder",
-					"command": "react-component-template.create-react-component",
-					"group": "Hli@React"
-				}
-			]
-		},
-		"commands": [
-			{
-				"command": "react-component-template.create-react-component",
-				"title": "Create react Component",
-				"args": "component"
-			}
-		]
-	},
-	"scripts": {
-		"vscode:prepublish": "npm run package",
-		"compile": "webpack --config ./build/node-extension.webpack.config.js",
-		"watch": "webpack --watch --config ./build/node-extension.webpack.config.js",
-		"package": "webpack --mode production --devtool hidden-source-map --config ./build/node-extension.webpack.config.js",
-		"test-compile": "tsc -p ./",
-		"test-watch": "tsc -watch -p ./",
-		"pretest": "npm run test-compile && npm run lint",
-		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js"
-	},
-	"devDependencies": {
-		"@types/vscode": "^1.52.0",
-		"@types/glob": "^7.1.3",
-		"@types/mocha": "^8.0.4",
-		"@types/node": "^12.11.7",
-		"eslint": "^7.15.0",
-		"@typescript-eslint/eslint-plugin": "^4.9.0",
-		"@typescript-eslint/parser": "^4.9.0",
-		"glob": "^7.1.6",
-		"mocha": "^8.1.3",
-		"typescript": "^4.1.2",
-		"vscode-test": "^1.4.1",
-		"ts-loader": "^8.0.11",
-		"webpack": "^5.10.0",
-		"webpack-cli": "^4.2.0"
-	},
-	"dependencies": {
-		"@types/mustache": "^4.1.1",
-		"mustache": "^4.1.0"
-	}
+	"publisher": "danzo7",
+  "engines": {
+    "vscode": "^1.52.0"
+  },
+  "categories": [
+    "Other",
+    "Snippets",
+    "Programming Languages"
+  ],
+  "activationEvents": [
+    "onCommand:extension.create-react-component"
+  ],
+  "main": "./dist/extension.js",
+  "contributes": {
+    "menus": {
+      "explorer/context": [
+        {
+          "when": "explorerResourceIsFolder",
+          "command": "extension.create-react-component",
+          "group": "Hli@React"
+        }
+      ]
+    },
+    "commands": [
+      {
+        "command": "extension.create-react-component",
+        "title": "Create react Component",
+        "args": "component"
+      }
+    ]
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run package",
+    "compile": "webpack --config ./build/node-extension.webpack.config.js",
+    "watch": "webpack --watch --config ./build/node-extension.webpack.config.js",
+    "package": "webpack --mode production --devtool hidden-source-map --config ./build/node-extension.webpack.config.js",
+    "test-compile": "tsc -p ./",
+    "test-watch": "tsc -watch -p ./",
+    "pretest": "npm run test-compile && npm run lint",
+    "lint": "eslint src --ext ts",
+    "test": "node ./out/test/runTest.js"
+  },
+  "devDependencies": {
+    "@types/vscode": "^1.52.0",
+    "@types/glob": "^7.1.3",
+    "@types/mocha": "^8.0.4",
+    "@types/node": "^12.11.7",
+    "eslint": "^7.15.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "glob": "^7.1.6",
+    "mocha": "^8.1.3",
+    "typescript": "^4.1.2",
+    "vscode-test": "^1.4.1",
+    "ts-loader": "^8.0.11",
+    "webpack": "^5.10.0",
+    "webpack-cli": "^4.2.0"
+  },
+  "dependencies": {
+    "@types/mustache": "^4.1.1",
+    "mustache": "^4.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Danzo7/vscode-react-component-template.git"
+  },
+  "keywords": [
+    "snippet"
+  ],
+  "author": "danzo7",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Danzo7/vscode-react-component-template/issues"
+  },
+  "homepage": "https://github.com/Danzo7/vscode-react-component-template#readme"
 }
