--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,14 @@
         "out": true // set this to false to include "out" folder in search results
     },
     // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
-    "typescript.tsc.autoDetect": "off"
+    "typescript.tsc.autoDetect": "off",
+    "god.tsconfig": "./tsconfig.json",
+    "css.customData": [],
+    "componentBoiler.component.StoryBook": true,
+    "componentBoiler.component.Styling": "scss",
+    "componentBoiler.component.Typescript": true,
+    "componentBoiler.CustomMustacheTemplates": [
+        
+    ],
+
 }
