--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "engines": {
     "vscode": "^1.52.0"
   },
-  "icon": "./images/icon.png",
+  "icon": "./src/images/icon.png",
   "categories": [
     "Snippets",
     "Formatters"
