--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "create component",
     "generate component",
     "reactJs component",
-    "costume component folder",
+    "custom component folder",
     "component folder generator",
     "any component generator"
   ],
